feat(profile): merge stats and social
